chapter03-deploy-scale-services/3.3-scale-services/k8s/01-application/06-mail-consumer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-consumer
  namespace: scale-service
  labels:
    name: mail-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mail-consumer
  template:
    metadata:
      labels:
        name: mail-consumer
    spec:
      containers:
      - name: mail-consumer
        image: 3dsinteractive/automation-technology:prd-1.0.20210117202336
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 30
          failureThreshold: 2
        ports:
        - name: api8080
          containerPort: 8080
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 500m
