chapter03-deploy-scale-services/3.3-scale-services/k8s/01-application/05-register-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-api
  namespace: scale-service
  labels:
    name: register-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      name: register-api
  template:
    metadata:
      labels:
        name: register-api
    spec:
      containers:
      - name: register-api
        image: 3dsinteractive/automation-technology:prd-1.0.20210117202336
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 30
          failureThreshold: 2
        ports:
        - name: api8080
          containerPort: 8080
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: register-api
  namespace: scale-service
  labels:
    name: register-api
spec:
  selector:
    name: register-api
  ports:
  - name: "api8080"
    port: 8080
    targetPort: 8080
    protocol: TCP
